# test_task_aiohttp

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  db.py  main.py  routers.py  schemas.py  swagger.yaml
tests/: test_add_exchange_rate.py  test_get_currency.py
