[tool.poetry]
name = "test_task_aiohttp"
version = "0.1.0"
description = ""
authors = ["Puzanovim <puzanovim@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
aioredis = "^1.3.1"
pydantic = "^1.8.2"
aiohttp-swagger = "^1.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
